Stabilize Gradle Twirl import order
Gradle receives template imports through a SetProperty, so the order
can vary between runs. That order is part of both the generated
import block and the template hash.

Sort the Gradle import list before formatting it, and keep the
Java DEFAULT_IMPORTS set in compiler-defined order so default
imports are deterministic too.

(cherry picked from commit 53e201063e2f9dcd4146326417597823da49dece)